# taxopy

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: documentation.yml
docs/: guide.md  index.md  reference.md
docs/js/: mermaid.mjs
docs/stylesheets/: extra.css
guide/: index.html
reference/: index.html
search/: search_index.json
stylesheets/: extra.css
taxopy/: __init__.py  core.py  exceptions.py  utilities.py
