[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "taxopy"
authors = [
    {name = "Antonio Camargo", email = "antoniop.camargo@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.5"
dynamic = ["version", "description"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
]

[project.urls]
Home = "https://github.com/apcamargo/taxopy"
